--- a/files/.config/sway/config
+++ b/files/.config/sway/config
@@ -63,6 +63,12 @@ input type:keyboard {
   xkb_variant 'dvp'
 }
 
+input type:touchpad {
+    dwt enabled
+    tap enabled
+    middle_emulation enabled
+}
+
 ### Key bindings
 #
 # Basics:
