--- a/files/.config/sway/config
+++ b/files/.config/sway/config
@@ -190,8 +190,13 @@ input type:touchpad {
     bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
     bindsym XF86AudioMicMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
-    bindsym $mod+at exec wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
-    bindsym $mod+slash exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+    # bindsym $mod+at exec wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+    # bindsym $mod+slash exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+
+    bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+    bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+    bindsym Shift+XF86MonBrightnessUp exec brightnessctl set +10%
+    bindsym Shift+XF86MonBrightnessDown exec brightnessctl set 10%-
 #
 # Resizing containers:
 #
