--- a/files/.config/waybar/config
+++ b/files/.config/waybar/config
@@ -11,18 +11,18 @@
         "sort-by-number": true,
         "active-only": false,
         "all-outputs": true,
-        "persistent-workspaces": {
-            "1": [],
-            "2": [],
-            "3": [],
-            "4": [],
-            "5": [],
-            "6": [],
-            "7": [],
-            "8": [],
-            "9": [],
-            "10": []
-        },
+        // "persistent-workspaces": {
+        //     "1": [],
+        //     "2": [],
+        //     "3": [],
+        //     "4": [],
+        //     "5": [],
+        //     "6": [],
+        //     "7": [],
+        //     "8": [],
+        //     "9": [],
+        //     "10": []
+        // },
         "format-icons": {
             "1": "I",
             "2": "II",
